--- a/src/main/resources/sass/home.scss
+++ b/src/main/resources/sass/home.scss
@@ -28,41 +28,40 @@
 		box-sizing:border-box;
 		outline: 0 none;
 		transition: box-shadow 0.1s;
+		
+		&:focus,
+		&:hover {
+			outline: none ;
+    		box-shadow: 10px 10px 10px #e2e2e2;		
+		}
+		
+		&::placeholder {
+			color: white;	
+		}
 	}
-}
+	
+	.confirm {
+		position: absolute;
+		font-family: "Montserrat-Regular";
+		top: 0;
+    	right: 0;
+    	width: 10%;
+		width: 9%;
+		border: none;
+		box-sizing:border-box;
+		height: 100%;
+		outline: 0 none;
+		background-color: #317697;
+		color: white;
+		font-size: 2em;
+		display: inline-block;
+		cursor: pointer;
+		margin: 0;
+		transition: font-size 0.1s;
+		
+		&:hover {
+			font-size: 2.6em;
+		}
+	}
 
-
-
-.access-token-field:focus,
-.access-token-field:hover {
-    outline: none ;
-    box-shadow: 10px 10px 10px #e2e2e2;
-}
-
-.access-token-field::placeholder{
-	color: white;
-}
-
-.confirm {
-	position: absolute;
-	font-family: "Montserrat-Regular";
-	top: 0;
-    right: 0;
-    width: 10%;
-	width: 9%;
-	border: none;
-	box-sizing:border-box;
-	height: 100%;
-	outline: 0 none;
-	background-color: #317697;
-	color: white;
-	font-size: 2em;
-	display: inline-block;
-	cursor: pointer;
-	margin: 0;
-	transition: font-size 0.1s;
-}
-
-.confirm:hover {
-	font-size: 2.6em;
 }
