--- a/src/main/resources/sass/list.scss
+++ b/src/main/resources/sass/list.scss
@@ -1,7 +1,57 @@
 @import 'base';
 
+.signers-switch {
+	display: none;
+	
+	&:checked ~ .menu {
+		margin-right: 0;
+		
+		.confirm {
+			background: url('/images/arrow-right.png') no-repeat 0.2em center;
+			background-size: 1.4em;
+			width: 2em;
+			margin-left: 0;
+			
+			&:hover {
+				background-color: #1b6da3;
+			}
+		}
+	}
+}
+
+.menu {
+	position: fixed;
+	right: 0;
+	width: 20em;
+	height: 100%;
+	background-color: #2980b9;
+	margin-right: -20em;
+	z-index: 2;
+	transition: margin-right 0.2s;
+	
+	&.enabled {
+		margin-right: -15em;
+	}
+	
+	.confirm {
+		cursor: pointer;
+		margin: auto;
+		display: block;
+		width: 100%;
+		height: 100%;
+		border: none;
+		background: url('/images/arrow-left.png') no-repeat 1em center;
+		background-size: 2.4em;
+		transition: background-color 0.1s;
+		
+		&:hover {
+			background-color: #1b6da3;
+		}
+	}
+}
+
 .title {
-	margin: 1em auto 2em;
+	margin: 0 auto 2em;
 	text-align: center;
 	display: block;
 	font-size: 2em;
@@ -10,51 +60,83 @@
 
 .documents {
 	margin: 1em auto;
-	text-align: center;
-}
-
-.documents .document {
-	background: #007EF2;
-	width: 22em;
-	color: white;
-	font-family: "Montserrat-Regular";
-	display: inline-block ;
-	margin: 1em ;
-	cursor: pointer;
-	transition: box-shadow 0.1s;
-}
-
-.documents .document:focus,
-.documents .document:hover {
-    outline: none ;
-    box-shadow: 10px 10px 10px #e2e2e2;
-}
-
-.documents .document .key {
-	font-size: 0.9em;
-	text-align: center;
-	margin-bottom: 3em;
-}
-
-.documents .document .details .line {
-	display: block;
-	margin-bottom: 0.5em;
-	line-height: 1.5em;
 	
-}
-
-.documents .document .details dt {
-	font-size: 0.9em;
-	margin-left: 0.5em;
-	display: inline-block;
-	vertical-align: super;
-}
-
-.documents .document .details dd {
-	margin-left: 0.4em;
-	display: inline-block;
-	text-overflow: ellipsis;
-	white-space: nowrap;
-	overflow: hidden;
-	width: 70%;
+	.switch {
+		display: none;
+		
+		&:checked ~ .document {
+			border: 5px solid $light-green;
+			outline: none ;
+    		box-shadow: 10px 10px 10px #e2e2e2;
+			
+			&:after {
+				border-color: $light-green;
+				background-color: $light-green;
+			}
+		}
+	}
+	
+	.document {
+		background: $light-blue;
+		border: 5px solid transparent;
+		width: 22em;
+		color: white;
+		font-family: "Montserrat-Regular";
+		display: inline-block ;
+		margin: 1em ;
+		cursor: pointer;
+		transition: box-shadow 0.1s, border-color 0.1s;
+		position: relative;
+		padding: 1em 0.2em;
+		
+		&:after {
+			position: absolute;
+			content: '';
+			width: 1.2em;
+			height: 1.2em;
+			border: 1px solid transparent;
+			border-radius: 50%;
+			right: -0.8em;
+			background-color: transparent;
+			transition: background 0.1s, border-color 0.1s;
+			top: -0.8em;
+		}
+		
+		&:focus,
+		&:hover {
+			outline: none ;
+    		box-shadow: 10px 10px 10px #e2e2e2;
+		}
+		
+		.key {
+			font-size: 0.9em;
+			font-weight: bold;
+			text-align: center;
+			margin-bottom: 3em;
+		}
+		
+		.details {
+			.line {
+				display: block;
+				margin-bottom: 0.5em;
+				line-height: 1.5em;
+			}
+			
+			dt {
+				font-size: 0.9em;
+				margin-left: 0.5em;
+				display: inline-block;
+				vertical-align: super;
+			}
+			
+			dd {
+				margin-left: 0.4em;
+				display: inline-block;
+				text-overflow: ellipsis;
+				white-space: nowrap;
+				overflow: hidden;
+				width: 70%;
+			}
+		}
+	}
 }
