--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -26,6 +26,9 @@
 	<input id="signers-switch" type="checkbox" class="signers-switch"/>
 	<section id="menu" class="menu">
 		<label for="signers-switch" class="confirm"></label>
+		<div class="menu-content">
+			<h3 class="choose-signer">Choose a signer</h3>
+		</div>
 	</section>
 	<img src="/images/btg-logo.png" class="btg-logo"/>
 	<h1 class="title">Documents</h1>
