--- a/src/main/resources/sass/list.scss
+++ b/src/main/resources/sass/list.scss
@@ -11,6 +11,7 @@
 			background-size: 1.4em;
 			width: 2em;
 			margin-left: 0;
+			display: inline-block;
 			
 			&:hover {
 				background-color: #1b6da3;
@@ -48,6 +49,23 @@
 			background-color: #1b6da3;
 		}
 	}
+	
+	.menu-content {
+		display: inline-block;
+		position: absolute;
+		width: calc(100% - 4em);
+		height: 100%;
+		
+		.choose-signer {
+			font-size: 1.4em;
+			display: block;
+			text-align: center;
+			color: white;
+			margin: 1em auto; 
+			font-family: "Montserrat-Regular";
+		}
+	}
+	
 }
 
 .title {
