Add gradle bower task

--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -14,10 +14,10 @@
     
     <link rel="stylesheet" href="/css/list.css"/>
     
-    <script src="/bower_components/async-define/async-define.min.js"/>
-    <script src="/bower_components/events-amd/events-amd.min.js"/>
-    <script src="/bower_components/doc-amd/doc.min.js"/>
-    <script src="/bower_components/ajax-amd/ajax.min.js"/>
+    <script src="/js/vendor/async-define/async-define.min.js"/>
+    <script src="/js/vendor/events-amd/events-amd.min.js"/>
+    <script src="/js/vendor/doc-amd/doc.min.js"/>
+    <script src="/js/vendor/ajax-amd/ajax.min.js"/>
     
     <script src="/js/listDocuments.js"/>
    
