Add error message

--- a/src/main/resources/sass/home.scss
+++ b/src/main/resources/sass/home.scss
@@ -44,7 +44,7 @@
 		position: absolute;
 		font-family: "Montserrat-Regular";
 		top: 0;
-    	right: 0;
+    	right: -9%;
     	width: 10%;
 		width: 9%;
 		border: none;
