--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -14,7 +14,7 @@
 	<link rel="stylesheet" href="/css/home.css"/>
 </head>
 <body>
-	<img src="/images/btg-logo.png" class="btg-logo"/>
+	<a href="/"><img src="/images/btg-logo.png" class="btg-logo"/></a>
 	<img src="/images/clicksign-logo.png" class="clicksign-logo"/>
 	<form method="GET" action="/documents" class="box">
 		<input name="accessToken" placeholder="Insira o Access token aqui" class="access-token-field"/>
