--- a/src/main/resources/sass/list.scss
+++ b/src/main/resources/sass/list.scss
@@ -67,6 +67,13 @@
 		position: absolute;
 		width: calc(100% - 4em);
 		height: 100%;
+		font-family: "Montserrat-Regular";
+		color: white;
+		
+		.empty-signers {
+			margin-top: 2em;
+			font-size: 1.4em;	
+		}
 		
 		.choose-signer {
 			font-size: 1.4em;
@@ -74,7 +81,6 @@
 			text-align: center;
 			color: white;
 			margin: 1em auto; 
-			font-family: "Montserrat-Regular";
 		}
 	}
 	
