--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -34,14 +34,14 @@
 				<h3 class="choose-signer">Escolha um signatario</h3>
 				<ul class="signers">
 					<div th:each="signer : ${signers}">
-						<input type="radio" name="selected-signer" th:id="${'signer-switch-' + signer.key}" class="selected-signer-switch"/>
+						<input type="radio" name="selected-signer" th:id="${'signer-switch-' + signer.key}" th:value="${signer.key}" class="selected-signer-switch"/>
 						<label  th:for="${'signer-switch-' + signer.key}">
 							<li th:id="${'signer-' + signer.key}" th:text="${signer.name}"></li>
 						</label>					
 					</div>
 				</ul>
 				<div id="batch-resume" class="batch-resume">
-					<p class="confirm-question">Deseja criar o lote para estes documentos e este signatario?</p>
+					<p class="confirm-question">Criar o lote para este signatario?</p>
 					<button id="send-documents" class="send-button"></button>
 				</div>
 			</div>
