--- a/src/main/resources/sass/list.scss
+++ b/src/main/resources/sass/list.scss
@@ -1,5 +1,31 @@
 @import 'base';
 
+.message {
+	font-size: 1.2em;
+	font-family: "Montserrat-Regular";
+	padding: 1em;
+	height: 1em;
+	max-height: 1em;
+	margin-top: -3em;
+	color: white;
+	transition: margin 0.2s;
+	text-align: left;
+	
+	&.success {
+		margin-top: 0;
+		background-color: $light-green;
+	}
+	
+	&.error {
+		animation: show-message ease-in 5s forwards;
+		background-color: $light-red;
+	}
+	
+	a {
+		color: white;
+	}
+}
+
 .error {
 	margin: auto;
 	display: block;
@@ -256,5 +282,20 @@
 				width: 70%;
 			}
 		}
+	}
+}
+
+@keyframes show-message {
+	
+	0% {
+		margin-top: 0;
+	}
+	
+	90% {
+		margin-top: 0;
+	}
+	
+	100% {
+		margin-top: -3em;
 	}
 }
