--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -23,7 +23,11 @@
    
 </head>
 <body>
-	<p id="message" class="message"></p>
+	<p id="success-message" class="message success">URL para assinatura: 
+		<a href="#" target="_blank" class="link"></a>
+		<span class="close">X</span>
+	</p>
+	<p id="error-message" class="message error">Ocorreu um erro ao criar o lote :(</p>
 	<input id="signers-switch" type="checkbox" class="signers-switch"/>
 	<section id="menu" class="menu">
 		<label for="signers-switch" class="confirm"></label>
