--- a/src/main/resources/sass/list.scss
+++ b/src/main/resources/sass/list.scss
@@ -1,28 +1,57 @@
 @import 'base';
 
 .message {
+	position: relative;
 	font-size: 1.2em;
 	font-family: "Montserrat-Regular";
 	padding: 1em;
 	height: 1em;
 	max-height: 1em;
-	margin-top: -3em;
 	color: white;
-	transition: margin 0.2s;
+	transition: top 0.2s;
 	text-align: left;
+	position: fixed;
+	top: -3em;
+	width: calc(100% - 2em);
+	z-index: 3;
 	
 	&.success {
-		margin-top: 0;
 		background-color: $light-green;
+			
+		&.enabled {
+			top: 0;
+		}
+		
+		.link {
+			color: white;
+		}
+		
+		.close {
+			position: absolute;
+			right: 1em;
+			background-color: $light-green;
+			border-radius: 50%;
+			width: 1.2em;
+			padding: 0.4em;
+			line-height: 1.2em;
+			font-size: 0.8em;
+			text-align: center;
+			height: 1.2em;
+			top: calc(50% - 1em);
+			cursor: pointer;
+			
+			&:hover {
+				background-color: $dark-green;
+			}
+		}
 	}
 	
 	&.error {
-		animation: show-message ease-in 5s forwards;
 		background-color: $light-red;
-	}
-	
-	a {
-		color: white;
+		
+		&.enabled {
+			animation: show-message ease-in 5s forwards;
+		}
 	}
 }
 
@@ -223,7 +252,7 @@
 	.document {
 		background: $light-blue;
 		border: 5px solid transparent;
-		width: 22em;
+		width: 24em;
 		color: white;
 		font-family: "Montserrat-Regular";
 		display: inline-block ;
@@ -236,12 +265,12 @@
 		&:after {
 			position: absolute;
 			content: '';
-			width: 1.2em;
-			height: 1.2em;
-			border: 1px solid transparent;
+			width: 1em;
+			height: 1em;
+			border: 2px solid $light-blue;
 			border-radius: 50%;
 			right: -0.8em;
-			background-color: transparent;
+			background-color: white;
 			transition: background 0.1s, border-color 0.1s;
 			top: -0.8em;
 		}
@@ -288,14 +317,14 @@
 @keyframes show-message {
 	
 	0% {
-		margin-top: 0;
+		top: 0;
 	}
 	
 	90% {
-		margin-top: 0;
+		top: 0;
 	}
 	
 	100% {
-		margin-top: -3em;
+		top: -3em;
 	}
 }
