fix checked list

--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -56,7 +56,7 @@
 		<a href="/"><img src="/images/btg-logo.png" class="btg-logo"/></a>
 		<h1 class="title">Documents</h1>
 		<p class="list-subtitle">Modo lista</p>
-		<input id="list-switch" type="checkbox" class="input-switch" checked="true" />
+		<input id="list-switch" type="checkbox" class="input-switch" />
 		<label for="list-switch" class="switch list-switch">
 			<span class="slider"></span>
 		</label>
