--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -12,6 +12,8 @@
     <meta name="application-name" content="BTG-clicksign"/>
     <meta name="apple-mobile-web-app-title" content="BTG-clicksign"/>
     
+    <link rel="icon" type="image/png" href="/favicon.ico" />
+    
     <link rel="stylesheet" href="/css/list.css"/>
     
     <script src="/js/vendor/async-define/async-define.js"/>
