--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -12,6 +12,8 @@
     <meta name="apple-mobile-web-app-title" content="BTG-clicksign"/>
 	<title>BTG - Clicksign</title>
 	<link rel="stylesheet" href="/css/home.css"/>
+	
+	<link rel="icon" type="image/png" href="/favicon.ico" />
 </head>
 <body>
 	<a href="/"><img src="/images/btg-logo.png" class="btg-logo"/></a>
